edit: synchronized the '!notify' command with the last command changes